--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.12.4",
+    "class-variance-authority": "^0.5.1",
+    "clsx": "^1.2.1",
     "ethers": "^5.0.0",
+    "lucide-react": "^0.137.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "wagmi": "^0.12.0"
   },
   "devDependencies": {
